@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{522, 64}, {962, 955}}</string>
+	<string>{{591, 73}, {1027, 1090}}</string>
 </dict>
 </plist>
