@@ -1,5 +1,9 @@
 2007-06-20  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed whois dialogs and DCC file transfer items to follow nick changes.
+
+2007-06-20  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to print DCC file transfer messages.
 	Changed to disable DCC file sending when my address is nil.
 	Refactoring.
